_pygi_marshal_from_py_uint64(): Use correct data type in py2.7 check

Casting an unsigned to signed and checking if positive was not good. Check the
unsigned 64 is below G_MAXUINT64 instead.

Side issue in https://bugzilla.gnome.org/show_bug.cgi?id=685000